# Mouser

./: .gitignore  .mcp.json  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
apps/android/: .gitignore  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/desktop/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  stage-engine.sh  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/appreveal-shim/: Package.resolved  Package.swift
apps/desktop/src-tauri/appreveal-shim/Sources/AppRevealShim/: Shim.swift
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: appreveal.rs  engine.rs  lib.rs  main.rs
apps/desktop/src/components/: clipboard-progress.tsx  device-rect.tsx  layout-canvas.tsx  permission-banner.tsx  section-card.tsx  segmented.tsx  setting-row.tsx  side-nav.tsx  toggle.tsx
apps/desktop/src/lib/: cx.ts  debug-log.ts  diagnostics-preference.ts  format.ts  layout-geometry.ts  mock-data.ts  os-meta.ts  section-preference.ts  theme-preference.ts  tray-preference.ts  types.ts  use-apply-settings.ts  use-input-permissions.ts  use-layout-drag.ts  use-theme.ts  use-workspace.ts  workspace-context.ts  workspace-provider.tsx
apps/desktop/src/sections/: clipboard-section.tsx  devices-section.tsx  diagnostics-section.tsx  general-section.tsx  input-section.tsx  layout-section.tsx  security-section.tsx
apps/desktop/src/styles/: global.css
apps/ios/: build-ffi.sh  project.yml
apps/ios/Sources/: AppLifecycle.swift  ClipboardModel.swift  ClipboardSettingsView.swift  ClipboardTransferIndicator.swift  CompanionView.swift  ControllingBanner.swift  Device.swift  DeviceSelectorRow.swift  GestureReadout.swift  Haptics.swift  HidKeymap.swift  IdentityStore.swift  Info.plist  KeyboardObserver.swift  MomentumScroller.swift  MouserApp.swift  MouserClient.swift  OrientationControl.swift  PeerAdvertiser.swift  PeerBrowser.swift  PointerAcceleration.swift  TouchpadCrosshair.swift  TouchpadView.swift  TrackpadHostView.swift  TrackpadState.swift  TrackpadSurface.swift
crates/mouser-clipboard/: Cargo.toml
crates/mouser-clipboard/src/: canonical.rs  engine.rs  lib.rs  reassembly.rs  settings.rs  source.rs  tracking.rs
crates/mouser-clipboard/tests/: robustness.rs  sync.rs
crates/mouser-core/: Cargo.toml
crates/mouser-core/src/: election.rs  identity.rs  lib.rs  ownership.rs  platform.rs
crates/mouser-core/tests/: election.rs  ownership.rs
crates/mouser-engine/: Cargo.toml
crates/mouser-engine/src/: core.rs  daemon_store.rs  diagnostics.rs  discovery.rs  lib.rs  runtime.rs
crates/mouser-engine/src/core/: types.rs  wire.rs
crates/mouser-engine/src/daemon/: clipboard.rs  clipboard_bulk.rs  clipboard_tests.rs  direct.rs  file_transfer.rs  file_transfer_tests.rs  ipc_bridge.rs  ipc_bridge_tests.rs  ipc_health.rs  mod.rs  pairing.rs  reconnect.rs  serve.rs  serve_session.rs
crates/mouser-engine/src/runtime/: control_lane.rs  liveness.rs
crates/mouser-engine/tests/: capture_modes.rs  core_logic.rs  discovery_connect.rs  loopback.rs  perf_core.rs
crates/mouser-ffi/: Cargo.toml
crates/mouser-ffi/bindings/: mouser_ffi.swift  mouser_ffiFFI.h  mouser_ffiFFI.modulemap
crates/mouser-ffi/src/: lib.rs  tests.rs
crates/mouser-files/: Cargo.toml
crates/mouser-files/src/: fs_sink.rs  lib.rs  path.rs  receiver.rs  sender.rs  sink.rs
crates/mouser-files/tests/: transfer.rs
crates/mouser-ipc/: Cargo.toml
crates/mouser-ipc/src/: client.rs  codec.rs  dto.rs  lib.rs  path.rs  server.rs  windows_security.rs
crates/mouser-mcp/: Cargo.toml
crates/mouser-mcp/src/: main.rs
crates/mouser-net/: Cargo.toml
crates/mouser-net/src/: bulk.rs  control.rs  dial.rs  discovery.rs  endpoint_bind.rs  handshake.rs  identity.rs  lib.rs  motion.rs  pin.rs  sas.rs  tls.rs  transport.rs
crates/mouser-net/tests/: bulk_transfer.rs  discovery.rs  loopback.rs  loopback_latency.rs  sas.rs
crates/mouser-protocol/: Cargo.toml
crates/mouser-protocol/src/: codec.rs  datagram.rs  enums.rs  framing.rs  lib.rs  messages.rs
crates/mouser-protocol/tests/: control_messages.rs  golden.rs  perf_codec.rs
crates/mouser-state/: Cargo.toml
crates/mouser-state/src/: codec.rs  error.rs  lib.rs  model.rs  state.rs  sync.rs  wire.rs
crates/mouser-state/tests/: adversarial.rs  convergence.rs
crates/mouser-testkit/: Cargo.toml
crates/mouser-testkit/src/: lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/examples/: uinput_demo.rs
crates/platform-linux/src/: adapter.rs  capture.rs  capture_translate.rs  clipboard.rs  display.rs  keymap.rs  lib.rs  uinput.rs
crates/platform-mac/: Cargo.toml
crates/platform-mac/examples/: drag_demo.rs  inject_demo.rs
crates/platform-mac/src/: adapter.rs  adapter_tests.rs  capture.rs  clipboard.rs  display_info.rs  dragdrop.rs  inject.rs  injector.rs  keymap.rs  keymap_capture.rs  lib.rs  permission.rs  tray.rs
crates/platform-mac/tests/: keymap_parity.rs
crates/platform-win/: Cargo.toml
crates/platform-win/examples/: inject_demo.rs  injector_display_demo.rs
crates/platform-win/src/: adapter.rs  adapter_tests.rs  capture.rs  capture_hooks.rs  capture_hooks_tests.rs  capture_rawinput.rs  capture_tests.rs  cfhtml.rs  clipboard.rs  clipboard_stub.rs  clipboard_text.rs  cursor_overlay.rs  inject.rs  keymap.rs  lib.rs
crates/platform-win/src/clipboard/: hdrop.rs
docs/: architecture.md  audit-round1.md  audit-round2.md  audit-round3.md  brief.md  build-status.md  communication-interface.md  design-review.md  implementation-audit.md  improvement-roadmap.md  latency-benchmarks.md  reference-software-kvm-architecture.md  tech-stack.md  windows-build.md
(+26 files in other folders)
