[package]
name = "mouser-clipboard"
version = "0.0.0"
description = "Mouser clipboard sync engine: a pure, I/O-free state machine driving the §7.7 protocol (offer → eager auto-pull → data chunks → reassemble/verify/apply), with per-device settings, prefer-native-Apple suppression, and loop prevention (see docs/communication-interface.md §7.7)."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mouser-protocol = { path = "../mouser-protocol" }
mouser-core = { path = "../mouser-core" }
sha2 = "0.10"

[lints]
workspace = true
