[package]
name = "mouser-engine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# The engine core is sans-IO and unsafe-free, so it adopts the workspace lints
# (panic-free discipline + `forbid(unsafe_code)`).
[lints]
workspace = true

[dependencies]
mouser-protocol = { path = "../mouser-protocol" }
mouser-core = { path = "../mouser-core" }
mouser-net = { path = "../mouser-net" }
mouser-ipc = { path = "../mouser-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = "0.7"
thiserror = "2"

# The daemon binary plugs the real per-OS adapters into the runtime.
[target.'cfg(target_os = "macos")'.dependencies]
platform-mac = { path = "../platform-mac" }

[target.'cfg(target_os = "windows")'.dependencies]
platform-win = { path = "../platform-win" }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux = { path = "../platform-linux" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
