[package]
name = "mouser-mcp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Pure-Rust, no unsafe: adopt the workspace panic-free + forbid-unsafe lints.
[lints]
workspace = true

[[bin]]
name = "mouser-mcp"
path = "src/main.rs"

[dependencies]
# The MCP server is a thin adapter over the daemon's IPC surface — it reuses the
# exact codec/DTOs the desktop UI uses, so there is no second wire implementation.
mouser-ipc = { path = "../mouser-ipc" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Network transport (Streamable-HTTP MCP) + LAN discovery, so the same tools are
# reachable by IP and auto-discoverable on every platform — not just over stdio.
axum = "0.7"
mdns-sd = "0.13"
getrandom = "0.2"
