[package]
name = "mouser-net"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mouser-protocol = { path = "../mouser-protocol" }
mouser-core = { path = "../mouser-core" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
rustls-pki-types = "1"
ed25519-dalek = { version = "2.2", features = ["pem", "pkcs8"] }
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
bytes = "1"
mdns-sd = "0.13"
if-addrs = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
mouser-files = { path = "../mouser-files" }

[lints]
workspace = true
