[package]
name = "mouser-protocol"
version = "0.0.0"
description = "Mouser wire protocol: framing, message envelope, and wire enums (see docs/communication-interface.md)."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
postcard = { version = "1", features = ["alloc"] }

[lints]
workspace = true
