[package]
name = "platform-linux"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# NOTE: this is a standalone uinput input-injection spike. It uses `unsafe`
# (opening /dev/uinput, syscalls via input-linux), so it intentionally does NOT
# adopt the workspace `unsafe_code = "forbid"` lint. All Linux-only code is
# cfg-gated so the crate still builds as an empty stub on macOS / Windows.

# `mouser-core` provides the `InputInjection`/`InputCapture` trait contracts the
# adapter structs implement (audit H2). The keymap's host-independent
# `supported_hid_usages` is buildable everywhere; the uinput adapter is Linux-only.
[dependencies]
mouser-core = { path = "../mouser-core" }

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.7"
# Wayland clipboard access, MIME-type oriented — maps directly to `ClipFormat`'s
# wire MIME types (spec §7.7). The X11 path is covered by XWayland on modern
# desktops; a future X11-native backend can be added behind the same trait.
wl-clipboard-rs = "0.9"

[[example]]
name = "uinput_demo"
path = "examples/uinput_demo.rs"
