[package]
name = "platform-linux"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# NOTE: this is a standalone uinput input-injection spike. It uses `unsafe`
# (opening /dev/uinput, syscalls via input-linux), so it intentionally does NOT
# adopt the workspace `unsafe_code = "forbid"` lint. All Linux-only code is
# cfg-gated so the crate still builds as an empty stub on macOS / Windows.

# `mouser-core` provides the `InputInjection`/`InputCapture` trait contracts the
# adapter structs implement (audit H2). The keymap's host-independent
# `supported_hid_usages` is buildable everywhere; the uinput adapter is Linux-only.
[dependencies]
mouser-core = { path = "../mouser-core" }

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.7"
# Wayland clipboard access, MIME-type oriented — maps directly to `ClipFormat`'s
# wire MIME types (spec §7.7).
wl-clipboard-rs = "0.9"
# X11 display geometry/cursor lookup (RandR + XQueryPointer) and native clipboard
# sessions. Wayland absolute cursor parity needs compositor-specific protocols.
x11rb = { version = "0.13.2", features = ["randr"] }
x11-clipboard = "0.9.3"

[[example]]
name = "uinput_demo"
path = "examples/uinput_demo.rs"
