[package]
name = "platform-mac"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# NOTE: this crate deliberately does NOT set `[lints] workspace = true`.
# The workspace forbids `unsafe_code`, but this macOS input-injection spike
# must call CGEvent/CGEventTap C APIs that require `unsafe`. Reconciliation
# with the core traits (`InputCapture`/`InputInjection`) is a later step.

[target.'cfg(target_os = "macos")'.dependencies]
# `highsierra` exposes CGEventCreateScrollWheelEvent2 (non-variadic scroll);
# `elcapitan` exposes CGEventPostToPid. Both are post-10.13 baselines we target.
core-graphics = { version = "0.25", features = ["highsierra", "elcapitan"] }
core-foundation = "0.10"
libc = "0.2"
# AppKit + Foundation bindings for the cross-machine drag-and-drop spike
# (NSPasteboard / NSDraggingSession / NSWindow / NSView). objc2 message sends
# require `unsafe`, which is why this crate does not adopt the workspace
# `forbid(unsafe_code)` lint (see lib.rs).
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSGeometry", "NSObject"] }
objc2-app-kit = { version = "0.3", features = [
  "NSPasteboard", "NSPasteboardItem", "NSDragging", "NSDraggingItem",
  "NSDraggingSession", "NSWindow", "NSView", "NSResponder", "NSApplication",
  "NSEvent", "NSImage", "NSGraphics", "NSGraphicsContext", "NSColor",
] }

[[example]]
name = "inject_demo"
path = "examples/inject_demo.rs"

[[example]]
name = "drag_demo"
path = "examples/drag_demo.rs"
