[package]
name = "mouser-desktop"
version = "0.0.0"
description = "Mouser desktop UI shell (Tauri v2). UI client only — does not own the daemon (see docs/tech-stack.md §5)."
edition.workspace = true
license.workspace = true
repository.workspace = true

# This crate is unsafe-free, so it adopts the workspace lints
# (`unsafe_code = "forbid"`) like the protocol/core crates.
[lints]
workspace = true

# The library is what mobile/other shells could embed; the binary is the app.
[lib]
name = "mouser_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "time"] }
mouser-ipc = { path = "../../../crates/mouser-ipc" }
# Direct mDNS browse so the Devices list shows peers even when the headless
# `mouserd` engine is not running (discovery needs no engine; the engine snapshot
# takes over for trust + live connection when it is up).
mouser-net = { path = "../../../crates/mouser-net" }
