[package]
name = "mouser-desktop"
version = "0.0.0"
description = "Mouser desktop UI shell (Tauri v2). UI client only — does not own the daemon (see docs/tech-stack.md §5)."
edition.workspace = true
license.workspace = true
repository.workspace = true

# This crate is unsafe-free on every platform EXCEPT the debug macOS build, where
# it links the AppReveal Swift shim and must call its `extern "C"` entry point —
# an `unsafe` FFI call (see src/appreveal.rs). The workspace `[lints]` `forbid`s
# `unsafe_code`, and `forbid` can't be locally relaxed, so this crate cannot adopt
# `[lints] workspace = true`. It instead replicates the workspace denies inline
# (`#![deny(unsafe_code)]` + the panic-free clippy denies in src/lib.rs) and only
# permits `unsafe` inside the debug-only `appreveal` module via a local
# `#[allow(unsafe_code)]`. This is the same pattern platform-mac/-win/-linux use
# for their C/Objective-C `unsafe`.
[lints.clippy]
unwrap_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# The library is what mobile/other shells could embed; the binary is the app.
[lib]
name = "mouser_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# Cross-platform "launch at login": macOS LaunchAgent, Windows registry Run key,
# Linux XDG autostart .desktop — handled entirely by the plugin (docs/tech-stack.md §5).
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "time"] }
mouser-ipc = { path = "../../../crates/mouser-ipc" }
